More initial slide work

--- a/index.html
+++ b/index.html
@@ -49,9 +49,62 @@
 				</section>
 
 				<section class="gocougs-community" data-background="images/gocougs-barn.jpg">
-				<p>Paul Quesnell - https://www.flickr.com/photos/pdquesnell/4989096528/</p>
+					<p>Paul Quesnell - https://www.flickr.com/photos/pdquesnell/4989096528/</p>
 				</section>
 
+				<section>
+					<h1>Community</h1>
+				</section>
+
+				<section>
+					<h1>Community</h1>
+					<p>social unit of any size that shares common values</p>
+				</section>
+
+				<section>
+					<h1>Communis</h1>
+					<p>things held in common</p>
+				</section>
+
+				<section>
+					<h1>Community</h1>
+					<p>with a common location</p>
+				</section>
+
+				<section>
+					<h1>Community</h1>
+					<p>with common objectives</p>
+				</section>
+
+				<section>
+					<h1>University</h1>
+				</section>
+
+				<section>
+					<h1>Universitas Magistrorum et Scholarium</h1>
+					<p>community of teachers and scholars</p>
+				</section>
+
+				<section>
+					<h1>University</h1>
+					<h2>==</h2>
+					<h1>Community</h1>
+				</section>
+
+				<section>
+					<h1>University Community</h1>
+					<p>Alumni, athletics, individual colleges, departments, student organizations, dormitories</p>
+				</section>
+
+				<section>
+					<h1>Silos</h1>
+				</section>
+
+				<section>
+					<h1>Silos</h1>
+					<p>Commmunities without cross pollenation become silos.</p>
+				</section>
+				
 				<section class="title-slide">
 					<h1>Higher Education</h1>
 					<h2>& Community</h2>
