Additional slide, notes progress

--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
 					<p>@jeremyfelt</p>
 				</section>
 
-				<section class="gocougs-community" data-background="images/gocougs-barn.jpg">
-					<p>Paul Quesnell - https://www.flickr.com/photos/pdquesnell/4989096528/</p>
-				</section>
-
 				<section>
 					<h1>Community</h1>
 				</section>
@@ -97,14 +93,32 @@
 				</section>
 
 				<section>
-					<h1>Silos</h1>
+					<h1>Commmunities without cross pollenation become <strong>silos</strong>.</h1>
 				</section>
 
 				<section>
 					<h1>Silos</h1>
-					<p>Commmunities without cross pollenation become silos.</p>
+					<p>And these aren't the tall grain silos you see driving through Eastern Washington, they're huge underground silos. Big pits in the ground. As you get deeper and deeper into the silo of your community, the light starts to disappear. You quickly lose track of what other individual communities are doing. You lose a benefit of being part of a larger community.</p>
+				</section>
+
+				<section>
+					<p>"Organizations that cannot breach the silo walls when necessary are ill-equipped to achieve breakthroughs of any kind whatsoever.</p>
+					<p>[...]</p>
+					<p>In a world where competition trumps collaboration, just managing to poke through the silo walls at all would be a breakthrough."</p>
+					<p>Will Novoselik, http://www.miscmagazine.com/breakthroughs-belong-to-no-one/</p>
 				</section>
 				
+				<section>
+					<p>"It’s not the raw creativity or herculean intellect of an inspired individual that solves problems. It’s the interaction between that individual and others that leads to epiphany. Most scientific and artistic innovations or breakthroughs emerge from joint thinking, impassioned conversations, constructive conflict and shared struggles among different people."</p>
+					<p>Will Novoselik, http://www.miscmagazine.com/breakthroughs-belong-to-no-one/</p>
+				</section>
+
+				<section>
+					<h1>Avoiding Silos</h1>
+				</section>
+
+				
+
 				<section class="title-slide">
 					<h1>Higher Education</h1>
 					<h2>& Community</h2>
